--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,6 +1,7 @@
 <article class="post">
     <div class="title">
         <h1>{{post.title}}</h1>
+        <h4>{{post.body}}</h4>
     </div>
     <div class="meta">
         By {{post.user.username}} on 
